--- a/DevExpressFormWithDataGrid/Pages/Index.cshtml
+++ b/DevExpressFormWithDataGrid/Pages/Index.cshtml
@@ -5,22 +5,55 @@
     ViewData["Title"] = "Home page";
 }
 
-@{ var test = new List<RecipeIngredient>(); }
-
 @(Html.DevExtreme().DataGrid<Recipe>()
+    .ID("recipesGrid")
     .ShowBorders(true)
+    .OnEditingStart("recipeOnEditingStart")
     .DataSource(ds => ds
         .Mvc()
         .Controller("Recipes")
         .LoadAction("Recipes")
+        .UpdateAction("Put")
         .Key("Id")
     )
     .Columns(c =>
     {
         c.AddFor(m => m.Id);
         c.AddFor(m => m.Name);
-        c.AddFor(m => m.RecipeIngredients).Visible(false);
-        c.AddFor(m => m.Description).Visible(false);
+        c.AddFor(m => m.RecipeIngredients)
+            .Visible(false)
+            .EditCellTemplate(@<text>
+                                  @(Html.DevExtreme().DataGrid<RecipeIngredient>()
+                                      .ID("recipeIngredientsGrid")
+                                      .OnRowInserted("updateRecipeIngredients")
+                                      .OnRowUpdated("updateRecipeIngredients")
+                                      .OnRowRemoved("updateRecipeIngredients")
+                                      .ShowBorders(true)
+                                      .Columns(columns =>
+                                      {
+                                          columns.AddFor(m => m.IngredientId)
+                                              .Caption("Ingredient")
+                                              .Lookup(lookup => lookup
+                                                  .DataSource(d => d
+                                                      .Mvc().Controller("Ingredients")
+                                                      .LoadAction("Ingredients")
+                                                      .Key("Id"))
+                                                  .ValueExpr("Id")
+                                                  .DisplayExpr("Name")
+                                              );
+                                      })
+                                      .DataSource(ds => ds
+                                          .Array().Data(new JS("data.RecipeIngredients"))
+                                      )
+                                      .Editing(e => e
+                                          .Mode(GridEditMode.Cell)
+                                          .AllowAdding(true)
+                                          .AllowDeleting(true)
+                                      )
+                                      )
+                               </text>);
+        c.AddFor(m => m.Description)
+            .Visible(false);
     })
     .MasterDetail(md => md
         .Enabled(true)
@@ -69,31 +102,7 @@
                 items.AddSimpleFor(m => m.Id);
                 items.AddSimpleFor(m => m.Name);
                 items.AddSimpleFor(m => m.RecipeIngredients)
-                    .ColSpan(2)
-                    .Template(@<text>
-                                  @(Html.DevExtreme().DataGrid<RecipeIngredient>()
-                                      .ShowBorders(true)
-                                      .Columns(columns =>
-                                      {
-                                          columns.AddFor(m => m.IngredientId)
-                                              .Caption("Ingredient")
-                                              .Lookup(lookup => lookup
-                                                  .DataSource(d => d
-                                                      .Mvc().Controller("Ingredients")
-                                                      .LoadAction("Ingredients")
-                                                      .Key("Id"))
-                                                  .ValueExpr("Id")
-                                                  .DisplayExpr("Name")
-                                              );
-                                      })
-                                      .DataSource(new JS("data.RecipeIngredients"))
-                                      .Editing(e => e
-                                          .Mode(GridEditMode.Cell)
-                                          .AllowAdding(true)
-                                          .AllowDeleting(true)
-                                      )
-                                      )
-                               </text>);
+                    .ColSpan(2);
                 items.AddSimpleFor(m => m.Description)
                     .ColSpan(2)
                     .Editor(editor => editor.TextArea().Height(200));
@@ -101,3 +110,28 @@
             ))
     )
     )
+
+<script>
+
+    var recipesGrid;
+    var rowIndex;
+    var recipeId;
+    
+    function recipeOnEditingStart(e) {
+        recipesGrid = $("#recipesGrid").dxDataGrid("instance");
+        rowIndex = recipesGrid.getRowIndexByKey(e.key);
+        recipeId = e.data.Id;
+    }
+    
+    function updateRecipeIngredients() {
+        var ds = $("#recipeIngredientsGrid").dxDataGrid("getDataSource");
+    
+        var temp = [];
+        ds.items().forEach(function(item) {
+            temp.push({ "RecipeId": recipeId, "IngredientId": item.IngredientId});
+        });
+    
+        recipesGrid.cellValue(rowIndex, "RecipeIngredients", temp);     
+    }
+
+</script>
